--- a/pages/client-landing-eng-page.html
+++ b/pages/client-landing-eng-page.html
@@ -51,7 +51,7 @@
 </div>
 
 <!-- javascript files -->
-<script src="js/navbar.js"></script>
+<script src="../js/navbar.js"></script>
    
 </body>
 </html>
