added the carousel

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 <div class="choose">
                
                     <div class="chose-eng">
-                        <a href='pages/client-landing-eng-page.html'>English</a> 
+                        <a href='pages/test.html'>English</a> 
                     </div>
                     <div class="chose-arab">
-                        <a href='pages/client-landing-arab-page.html'>Arabic</a>
+                        <a href='pages/test.html'>Arabic</a>
                     </div>
                 </div> 
              <!-- </div> -->
